<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.androidc22.socialmedic.MainActivity">

    <Button
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEntrar"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/idLembrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="lembrar de mim"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txtCadastrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_cadastrado"
        android:layout_alignBottom="@+id/idLembrete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"

        android:text="@string/login_01"
        tools:text="Login" />

    <Button
        android:id="@+id/btn_EsqueciSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_a_senha"
        tools:text="Esqueci a Senha!"
        android:layout_below="@+id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Senha:"
        tools:text="Senha:" />

</RelativeLayout>
