<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tela_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidc22.socialmedic.TelaMenu">

    <Button
        android:text="@string/hospitais"
        android:id="@+id/btnHopitais"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_below="@+id/imageButton3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:id="@+id/imageBtnHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAvalicao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButton3"
        android:layout_toLeftOf="@+id/btnHopitais"
        android:layout_toStartOf="@+id/btnHopitais"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_menu_add"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnFavoritos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnMedicos"
        android:layout_toLeftOf="@+id/btnHopitais"
        android:layout_toStartOf="@+id/btnHopitais"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imageBtnMedico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnMedicos"
        android:layout_toLeftOf="@+id/btnMedicos"
        android:layout_toStartOf="@+id/btnMedicos"
        android:background="@android:color/transparent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <Button
        android:text="@string/favoritos"
        android:id="@+id/btnFavoritos"
        android:layout_width="280dp"
        android:layout_below="@+id/btnMedicos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="66dp" />

    <Button
        android:id="@+id/btnMedicos"
        android:layout_width="280dp"
        android:layout_height="68dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:text="@string/medicos" />

    <ImageButton
        android:id="@+id/imageBtnAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnAvalicao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageBtnHospital"
        android:layout_toLeftOf="@+id/btnHopitais"
        android:layout_toStartOf="@+id/btnHopitais"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/checkbox_on_background"
        tools:ignore="ContentDescription" />

    <Button
        android:text="@string/avalia_o"
        android:id="@+id/btnAvalicao"
        android:layout_width="280dp"
        android:layout_height="66dp"
        android:layout_below="@+id/btnHopitais"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtInfoTelaMenu"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:text="Menu Principal" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAvalicao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/sair"
        tools:text="Sair" />
</RelativeLayout>
